--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
 	<p>This Example just print's the raw accelerometer and gyro data. Will return null if no device information is found.</p>
 	<p>gyro.getFeatures: <span id="features"></span></p>
 	<span id="example"></span>
-    <div id="aaa"><font size="+6">AAA</font></div>
+    <div id="aaa" style="position:absolute"><font size="+6">AAA</font></div>
 	<script src="../js/gyro.js"></script>
 	<script>
 		gyro.startTracking(function(o) {
