--- a/demo/index.html
+++ b/demo/index.html
@@ -23,6 +23,7 @@
 										"<p> beta = " + o.beta + "</p>" +
 										"<p> gamma = " + o.gamma + "</p>";
 		    a.style.left = a.offsetLeft + o.x +"px";
+			a.style.top = a.offsetTop + o.y +"px";
 		});
 	</script>
 </body>
