--- a/demo/index.html
+++ b/demo/index.html
@@ -22,7 +22,7 @@
 										"<p> alpha = " + o.alpha + "</p>" +
 										"<p> beta = " + o.beta + "</p>" +
 										"<p> gamma = " + o.gamma + "</p>";
-		    a.style.left = a.offsetLeft + o.x +"px";
+		    a.style.left = a.offsetLeft - o.x +"px";
 			a.style.top = a.offsetTop + o.y +"px";
 		});
 	</script>
